--- a/ASP_NET_HW_Module_02_part_01/ASP_NET_HW_Module_02_part_01.csproj
+++ b/ASP_NET_HW_Module_02_part_01/ASP_NET_HW_Module_02_part_01.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
+
 </Project>
