--- a/ASP_NET_HW_Module_02_part_01/ASP_NET_HW_Module_02_part_01.csproj
+++ b/ASP_NET_HW_Module_02_part_01/ASP_NET_HW_Module_02_part_01.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="wwwroot\App_Data\" />
   </ItemGroup>
 
 </Project>
